--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node -r dotenv/config index.js"
+    "test": "mocha --experimental-modules tests --exit",
+    "dev": "node -r dotenv/config index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
+    "pino": "^7.8.1",
     "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0"
   }
 }
