--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --experimental-modules tests --exit",
-    "dev": "node -r dotenv/config index.mjs"
+    "dev": "node -r dotenv/config src/index.mjs"
   },
   "keywords": [],
   "author": "",
