--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --experimental-modules tests --exit",
-    "dev": "node -r dotenv/config src/index.mjs"
+    "test": "mocha --experimental-modules tests/main.test.mjs --exit",
+    "dev": "nodemon -r dotenv/config src/index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "chai-http": "^4.3.0"
+    "chai-http": "^4.3.0",
+    "nodemon": "^2.0.15"
   }
 }
