--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --experimental-modules tests/main.test.mjs --exit",
+    "test": "npx mocha --experimental-modules tests/main.test.mjs --exit",
     "dev": "nodemon -r dotenv/config src/index.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pino": "^7.8.1",
     "sequelize": "^6.17.0"
@@ -20,6 +22,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
