--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx mocha --experimental-modules tests/main.test.mjs --exit",
-    "dev": "nodemon -r dotenv/config src/index.mjs"
+    "dev": "nodemon -r dotenv/config src/index.mjs",
+    "start": "node src/index.mjs"
   },
   "keywords": [],
   "author": "",
