--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^3.5.1"
