--- a/backend-pizzaria/package.json
+++ b/backend-pizzaria/package.json
@@ -7,7 +7,12 @@
     "test": "npx mocha --experimental-modules tests/main.test.mjs --exit",
     "dev:nodemon": "npx nodemon -r dotenv/config src/index.mjs",
     "dev:docker": "docker compose up -d --build",
-    "start": "node src/index.mjs"
+    "postdev:docker": "npx sequelize-cli db:migrate",
+    "start": "node src/index.mjs",
+    "db:create": "npx sequelize-cli db:create",
+    "db:drop": "npx sequelize-cli db:drop",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:seed": "npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
