--- a/backend-pizzaria/.env
+++ b/backend-pizzaria/.env
@@ -1,6 +1,7 @@
-PORT=8010
+PORT=8000
 DB_NAME=pizzaria
 DB_USER=root
 DB_PASSWORD=root
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=5432
+NODE_ENV=development
