--- a/backend-pizzaria/docker-compose.yaml
+++ b/backend-pizzaria/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - DB_HOST=db
     ports: 
-      - 8010:8010
+      - 8000:8000
     volumes:
       - "./src:/app/src"
     depends_on:
@@ -17,15 +17,10 @@ services:
         condition: service_healthy
   db:
     container_name: db-pizzaria
-    image: mysql:8.0
+    image: postgres:latest
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=pizzaria
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=pizzaria
     ports:
-      - 3306:3306
-    cap_add:
-      - SYS_NICE
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 30
+      - 5432:5432
