--- a/backend-pizzaria/.sequelizerc
+++ b/backend-pizzaria/.sequelizerc
@@ -3,8 +3,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/config', 'config.json'),
+  'config': path.resolve('src/config', 'db-config.mjs'),
   'models-path': path.resolve('src', 'models'),
   'seeders-path': path.resolve('src', 'seeders'),
-  'migrations-path': path.resolve('src', 'migrations')
+  'migrations-path': path.resolve('src', 'migrations'),
 };
