--- a/backend-pizzaria/package.json
+++ b/backend-pizzaria/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.3",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "pino": "^7.8.1",
     "sequelize": "^6.17.0"
   },
