--- a/backend-pizzaria/.env
+++ b/backend-pizzaria/.env
@@ -1,7 +1,7 @@
 PORT=8000
-DB_NAME=pizzaria
+DB_DATABASE=pizzaria
 DB_USER=root
-DB_PASSWORD=root
 DB_HOST=localhost
+DB_PASSWORD=root
 DB_PORT=5432
 NODE_ENV=development
